# CellAgent

./: .#.gitignore  .#manifest.txt  .gitignore  BUILD-NOTES  Cargo.toml  Cargo.toml.baseline  Dockerfile  Dockerfile.baseline  Dockerfile.cell  Dockerfile.main  LICENSE  Makefile  Multicell.key  NOTES.events  README  README.md  build.rs  check-trace.pl  copied-frag-entl_device.c  datacenter.txt  debug_output.txt  ec-hello.js  ecnl_device.c  ecnl_device.h  noc_master.json  orig-frag-netdev.c  patch-3.4.2.1.dif  patch.dif  routing_table.json  test.json  uptree.json
.ideax/: modules.xml  vcs.xml
actix_server/: 10cell_trace_filtered.json  Cargo.toml
actix_server/html/: index.html  visualize.js  visualizer.css
actix_server/src/: discoverd.rs  geometry.rs  hello.rs  index.rs  lib.rs  main.rs  replay.rs  stacktreed.rs  trace_record.rs
binaries/cell/: Cargo.toml  build.rs
binaries/external_echoDemo/: Cargo.toml
binaries/simulator/: Cargo.toml  build.rs
cell/: Cargo.toml
cellagent/: .gitignore  .project  Cargo.toml  Dockerfile.baseline  Dockerfile.cell  Multicell.key  README  build.rs  ec-hello.js  trace.json  traph-diff.pl
cellagent/.ideax/: misc.xml  vcs.xml
cellagent/configs/: 10cell_config.json  3cell_config.json  6x4_config.json  6x4_config_test.json  nxm_config.json
cellagent/ecnl/: Makefile  ecnl_sdk.c  ecnl_sdk.h  port.c  port.h
cellagent/src/: app_message.rs  blueprint.rs  cellagent.rs  cmodel.rs  config.rs  container.rs  dal.rs  datacenter.rs  ec_message.rs  ec_message_formats.rs  ecnl.rs  ecnl_port.rs  lib.rs  nalcell.rs  name.rs  noc.rs  packet.rs  packet_engine.rs  (+11 more)
configs/: 10cell_config.json  3cell_config.json
driver/: README.md
ecnl/: Makefile  ecnl.c  ecnl_sdk.c  genl_sample.c
event-example/: Makefile  kern.c  user.c
external_echoDemo/: Cargo.toml
lib/: Makefile  atomic_link.c  ecnl_proto.c  ecnl_proto.h  genl_sample.c  mock_exchange.c  route-repair.c
scripts/: ip-net-setup  ip-network-script
src/: Makefile  app_message.rs  app_message_formats.rs  blueprint.rs  borderCell.rs  cell.rs  cellagent.rs  cmodel.rs  config.rs  container.rs  dal.rs  datacenter.rs  diffs  dumpstack.rs  ec_message.rs  ec_message_formats.rs  ec_message_types.rs  ecargs.rs  ecnl_device.c  ecnl_device.h  ecnl_entl_if.h  entl_device.c  entl_device.h  entl_ioctl.h  entl_skb_queue.h  entl_state_machine.c  entl_state_machine.h  entl_stm_if.h  entl_user_api.h  entt_queue.h  errors.rs  external_echoDemo.rs  gvm_equation.rs  interiorCell.rs  lib.rs  link.rs  main.rs  message.rs  message_types.rs  nalcell.rs  (+27 more)
src-20170129/: main.rs  name.rs  tenant.rs
src-20170130/: main.rs  name.rs  tenant.rs
src-20170131/: config.rs  main.rs  nalcell.rs  name.rs  tenant.rs  utility.rs
src-20170202/: cellagent.rs  container.rs  errors.rs  main.rs  name.rs  port.rs  routingtable.rs  tenant.rs  traph.rs  vm.rs
src-20170203/: config.rs  nalcell.rs  vm.rs
src-20170802/: cellagent.rs  datacenter.rs  ecargs.rs  gvm_equation.rs  main.rs  message.rs  message_types.rs  name.rs  packet.rs  packet_engine.rs  port.rs  routing_table_entry.rs  traph.rs  utility.rs
src-20170808/: cellagent.rs  config.rs  container.rs  datacenter.rs  link.rs  main.rs  message.rs  nalcell.rs  name.rs  noc.rs  packet.rs  vm.rs
src-20170821/: cellagent.rs  datacenter.rs  ecargs.rs  gvm_equation.rs  link.rs  message.rs  message_types.rs  nalcell.rs  name.rs  noc.rs  packet.rs  packet_engine.rs  port.rs  routing_table_entry.rs  service.rs  tenant.rs  traph.rs  utility.rs
trace-replay/: trace-C-0.json  trace-C-1.json  trace-C-10.json  trace-C-11.json  trace-C-12.json  trace-C-13.json  trace-C-14.json  trace-C-15.json  trace-C-16.json  trace-C-17.json  trace-C-18.json  trace-C-19.json  trace-C-2.json  trace-C-20.json  trace-C-21.json  trace-C-22.json  trace-C-23.json  trace-C-24.json  trace-C-25.json  trace-C-26.json  trace-C-27.json  trace-C-28.json  trace-C-29.json  trace-C-3.json  trace-C-4.json  trace-C-5.json  trace-C-6.json  trace-C-7.json  trace-C-8.json  trace-C-9.json  trace-Other.json
userspace/: .gitignore  README.md
userspace/actix_server/: .gitignore  10cell_trace_filtered.json  24cell_trace_filtered.json  Cargo.toml  filter_traces.sh
userspace/actix_server/html/: index.html  visualize.js  visualizer.css
userspace/actix_server/src/: discoverd.rs  geometry.rs  hello.rs  index.rs  lib.rs  main.rs  replay.rs  stacktreed.rs  trace_record.rs
userspace/cellagent/: .gitignore  BUILD-NOTES  Cargo.toml  Dockerfile.baseline  Dockerfile.cell  Dockerfile.main  README  README.md  build.rs  config.json  ec-hello.js  sample_output.txt
userspace/cellagent/.ideax/: modules.xml  workspace.xml
userspace/cellagent/binaries/cell/: build.rs
userspace/cellagent/configs/: 10cell_config.json  3cell_config.json  6x4_config.json  6x4_config_test.json  nxm_config.json
userspace/cellagent/ecnl/: Makefile  ecnl_sdk.c  port.c  port.h  session.c  session.h
userspace/cellagent/src/: app_message.rs  app_message_formats.rs  blueprint.rs  cellagent.rs  cmodel.rs  config.rs  container.rs  dal.rs  datacenter.rs  dumpstack.rs  ec_message.rs  ec_message_formats.rs  ecnl.rs  ecnl_lib.rs  ecnl_port.rs  errors.rs  gvm_equation.rs  lib.rs  link.rs  nalcell.rs  name.rs  noc.rs  packet.rs  packet_engine.rs  port.rs  port_tree.rs  rack.rs  replay.rs  routing_table.rs  routing_table_entry.rs  service.rs  simulated_border_port.rs  simulated_interior_port.rs  simulated_internal_port.rs  simulated_port.rs  snake.rs  tenant.rs  test.rs  traph.rs  traph_element.rs  (+5 more)
userspace/cellagent/trace-demo/: trace-C-0.json  trace-C-1.json  trace-C-10.json  trace-C-11.json  trace-C-12.json  trace-C-13.json  trace-C-14.json  trace-C-15.json  trace-C-16.json  trace-C-17.json  trace-C-18.json  trace-C-19.json  trace-C-2.json  trace-C-20.json  trace-C-21.json  trace-C-22.json  trace-C-23.json  trace-C-24.json  trace-C-25.json  trace-C-26.json  trace-C-27.json  trace-C-28.json  trace-C-29.json  trace-C-3.json  trace-C-4.json  trace-C-5.json  trace-C-6.json  trace-C-7.json  trace-C-8.json  trace-C-9.json  trace-Datacenter.json  trace-Rack.json
(+42 files in other folders)
