[package]
name = "multicell"
version = "0.1.0"
authors = ["alanhkarp <alanhkarp@gmail.com>"]

[dependencies]
crossbeam = "0.2"
eval = "^0.4.1"
failure = "0.1.0"
#failure_derive = "0.1.0"
rand = "*" # Or a specific version
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
time = "0.1"
uuid = { version = "0.6.1", features = ["serde", "v4"] }

#[dependencies.failure]
#git = "https://github.com/withoutboats/failure.git"
#[dependencies.failure_derive]
#git = "https://github.com/withoutboats/failure_derive.git"