[package]
name = "multicell"
version = "0.1.0"
authors = ["Alan Karp <alan@earthcomputing.io>"]
edition = "2018"

[dependencies]
backtrace = "0.3"
chrono = { version = "0.4.3", features = ["serde"] }
crossbeam = "0.2"
ditto = "0.2.0" # CRDT library
either = "1.5"
eval = "^0.4.1"
failure = "0.1.1"
#failure_derive = "0.1.0"
futures = "0.1.23"
indexmap = "1.0.1" # HashMap and HashSet that preserve order
internment = "0.3.6"
lazy_static = "1.1.0"
rand = "*" # Or a specific version
rdkafka = "0.17.0"
#schema = { path = "/Users/alan/Documents/Eclipse/schema" }
#schema_derive = { path = "/Users/alan/Documents/Eclipse/schema-derive" }
serde = { version = "1.0.27", features = ["rc"] }
serde_derive = "1.0.27"
serde_json = "1.0.9"
time = "0.1"
tokio = "*"
uuid = { version = "0.7.0", features = ["serde", "v4"] }
