[package]
name = "ec_trace_analyzer"
version = "0.1.0"
authors = ["alanhkarp <alanhkarp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.1.4"
actix-web = "1.0.5"
failure = "0.1.5"
serde = { version = "1.0.27", features = ["rc"] }
serde_derive = "1.0.27"
serde_json = "1.0.9"
