#---------------------------------------------------------------------------------------------
 #  Copyright © 2016-present Earth Computing Corporation. All rights reserved.
 #  Licensed under the MIT License. See LICENSE.txt in the project root for license information.
#---------------------------------------------------------------------------------------------
[package]
# resolver = "2" # resolver that doesn't combine features
name = "ec_fabrix"
version = "0.1.0"
authors = ["Alan Karp <alan@earthcomputing.io>"]
edition = "2018"
build = "build.rs"

[features]
api-new = []
api-old = []
cell = []
noc = []
simulator = []
webserver = []

[[bin]]
name = "simulator"
required-features = ["simulator"]

[[bin]]
name = "cell"
required-features = ["cell"]

[[bin]]
name = "external_echoDemo"
required-features = ["noc"]

[[test]]
name = "test"
test = true
path = "src/test.rs"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode
opt-level = 3

[profile.dev]
opt-level = 0 # Turn off optimization in Development mode
split-debuginfo = "unpacked" # Speed up compilation on Mac

[profile.release]
lto = true

[dependencies]
actix-web = "2.0.0"
actix-rt = "0.2.4"
arrayvec = {version = "0.4.11", features = ["serde-1"]}
backtrace = "0.3" # used in dumpstack.rs
bimap = {version = "0.3.1", features = ["serde"]} # bi-directional hashmap h: H(A,B), h.get_by_left(a: A), h.get_by_right(b: B)
#bincode = "1.1.2" # for binary serialization
cc = "1.0"
#chrono = { version = "0.4.3", features = ["serde"] }
crossbeam = "0.7.1"
crossbeam-channel = "0.4.4"
#[cfg(feature = "cell")]
#c_string = "0.7.0"
#displaydoc = "0.1.4" // Derive Display from doc comments
#ditto = "0.2.0" # CRDT library
either = "1.5"
eval = "^0.4.1" # Abandoned
#evalexpr = "5" # A more comprehensive eval
failure = "0.1.5"
failure_derive = "0.1.0"
futures = "0.3.1" # used in dal.rs
#im = "13.0.0" # Fast cloneable collections
#indexmap = "1.0.1" # HashMap and HashSet that preserve order
#internment = "0.3.6"
itertools = "0.8.2"
lazy_static = "1.1.0"
#[cfg(feature = "cell")]
libc = "0.2.57"
#log = {version = "0.4.6", features = ["std", "serde"]} # Should use instead of my trace approach
multi_mut = "0.1"
openssl-sys = {version = "0.9.63", features = ["vendored"]}
#puffin = "0.3" # Simple to use profiler
#puffin-imgui = "??" # Visualizer for puffin
rand = "0.5.4"
#rdkafka = "0.17.0"
reqwest = "0.9.11"
#rusoto_s3 = "0.36.0" # Library for AWS S3
#schema = { path = "/Users/alan/Documents/Eclipse/schema" }  # JSON schema
#schema_derive = { path = "/Users/alan/Documents/Eclipse/schema-derive" }
serde = { version = "1.0.27", features = ["rc"] }
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
serde_derive = "1.0.27"
serde_json = { version = "1.0.9", features = ["preserve_order"] }
strum = "0.15.0" # Enum operations
strum_macros = "0.15.0"
time = "0.1"
typetag = "0.1.2" # Serialize/Deserialize &dyn Trait
uuid = { version = "0.7.0", features = ["serde", "v4"] }
